# hmr

./: AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/demo/: README.md  a.py  b.py  common.py  entry.py  pyproject.toml
examples/fastapi/: README.md  a.py  b.py  c.py  main.py  pyproject.toml
examples/flask/: README.md  a.py  app.py  b.py  pyproject.toml  start.py
