[project]
name = "hmr-cookbook"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "hmr>=0.1.1.1,<0.2",
    "ruff~=0.9.0",
]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "FURB",  # refurb
    "RUF",   # ruff
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "W",     # pycodestyle
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "FA",    # flake8-future-annotations
    "TC",    # flake8-type-checking
    "FBT",   # flake8-boolean-trap
    "ISC",   # flake8-implicit-str-concat
    "ARG",   # flake8-unused-arguments
    "PIE",   # flake8-pie
    "PTH",   # flake8-use-pathlib
    "RSE",   # flake8-raise
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "ASYNC", # flake8-async
]
